--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<!-- Uses https://thispersondoesnotexist.com/ to source images -->
 						<img
 							class="h-32 w-32 rounded-full mx-auto mx-4"
-							src="D:/HTML/project web/img/kambing.jpg"
+							src="D:\HTML\praktisi\docs\img\kambing"
 						/>
 						<div class="mb-12 text-center mt-4 justify-center items-center">
 							<!-- TODO: replace with your name below -->
